@@ -6,6 +6,7 @@ pitrery 1.8
   * Support pax to create hardlinks, for better portability. GNU cp
     stays the default, the configuration goes to the Makfile.
 
+  * Add a -V switch to the pitrery wrapper script to show the version.
 
 pitrery 1.7
 ===========
